--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
 
@@ -15,12 +14,12 @@
 <li>Navigating to a new URL will remove emulation right before loading the new url, also causing a flash</li>
 </ul>
 
-    <button id="b1">open devtools</button>     <button id="b2">reload</button> 
+    <button id="b1">open devtools</button>     <button id="b2">reload</button>
     <webview src="about:blank" style="width:100%;height:400px;border:1px solid red"></webview>
-  
-  
+
+
     <script>
-      const {remote} = require("electron");
+      const remote = require('@electron/remote')
       const webview = document.querySelector("webview");
       const button = document.querySelector("#b1");
       const button2 = document.querySelector("#b2");
@@ -54,7 +53,7 @@ location.href=location.href;
         }
       }, {once: true});
 
-      
+
 
 
     </script>
